# fleet-medic

./: .gitignore  CLAUDE.md  CONTEXT.md  README.md  pyproject.toml
.github/workflows/: apply.yml  ci.yml  sensor.yml
docs/agents/: domain.md  issue-tracker.md
ops/: README.md  ops-ro-guard  ops-rw-guard
ops/sudoers.d/: fleet-medic-ops
ops_mcp/: __init__.py  apply.py  bounds.py  command_runner.py  sanitize.py  server.py  write_plan.py
ops_mcp/tools/: __init__.py  deploys.py  disk.py  incident_report.py  logs.py  prune.py  rotate.py  runbook.py  vitals.py
project-docs/: CODING_STANDARDS.md  roadmap.md
project-docs/adr/: 0001-llm-never-in-the-polling-loop.md  0002-agent-lives-off-box.md  0003-public-runtime-output-boundary.md  0004-ops-rw-write-path-wiring.md  0005-box-write-path-privilege-model.md
project-docs/agents/: orchestrator.js
project-docs/agents/prompts/: implement.md  merge.md  (+1 more)
project-docs/architecture/: system-overview.md
runbooks/: disk-full.md
sensor/: __init__.py  budget.py  decide.py  incidents.py  main.py  snapshot.py  tripwire.py
tests/: conftest.py  test_apply.py  test_bounds.py  test_command_runner.py  test_ops_ro_guard.py  test_ops_rw_guard.py  test_sanitize.py  test_scaffold.py  test_sensor_budget.py  test_sensor_decide.py  test_sensor_incidents.py  test_sensor_main.py  test_sensor_snapshot.py  test_sensor_tripwire.py  test_server.py  test_tool_deploys.py  test_tool_disk.py  test_tool_incident_report.py  test_tool_logs.py  test_tool_prune.py  test_tool_rotate.py  test_tool_runbook.py  test_tool_vitals.py  test_write_plan.py
