[project]
name = "fleet-medic"
version = "0.1.0"
description = "Runtime ops agent for the live_sessions VPS fleet: a deterministic sensor wakes a tool-using LLM agent that diagnoses, remediates behind a gate, self-verifies, and files an incident report."
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.28.1",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff>=0.15",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers --import-mode=importlib"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]
